# stopwatch

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
include/mc/: stopwatch.hpp
include/stopwatch/: stopwatch.hpp
src/: stopwatch.cpp
